# ChangeLog for dev-python/twisted-web
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-web/ChangeLog,v 1.82 2013/01/14 03:59:48 patrick Exp $

*twisted-web-11.1.0-r1 (02 Apr 2013)

  02 Apr 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  +twisted-web-11.1.0-r1.ebuild, +metadata.xml:
  Use twisted-r1 eclass. -f

*twisted-web-12.3.0 (14 Jan 2013)

  14 Jan 2013; Patrick Lauer <patrick@gentoo.org> +twisted-web-12.3.0.ebuild:
  Bump

  08 Oct 2012; Marien Zwart <marienz@gentoo.org> twisted-web-12.2.0.ebuild:
  Fix python dependency to match dev-python/twisted's, spotted by Arfrever.

  05 Oct 2012; Marien Zwart <marienz@gentoo.org> twisted-web-10.2.0.ebuild,
  twisted-web-11.0.0.ebuild:
  Restrict pypy in twisted < 11.1.0 (bug #420653).

*twisted-web-12.2.0 (27 Sep 2012)

  27 Sep 2012; Marien Zwart <marienz@gentoo.org> +twisted-web-12.2.0.ebuild:
  Bump to 12.2.0 (bug #423793)

  13 May 2012; Alexis Ballier <aballier@gentoo.org> twisted-web-12.0.0.ebuild:
  keyword ~amd64-fbsd

*twisted-web-12.0.0 (22 Mar 2012)

  22 Mar 2012; Patrick Lauer <patrick@gentoo.org> +twisted-web-12.0.0.ebuild:
  Bump

*twisted-web-11.1.0 (27 Dec 2011)

  27 Dec 2011; Mike Gilbert <floppym@gentoo.org> +twisted-web-11.1.0.ebuild:
  Version bump.

  17 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  twisted-web-11.0.0.ebuild:
  ppc64 stable wrt #366131

  17 Jun 2011; Jeroen Roovers <jer@gentoo.org> twisted-web-11.0.0.ebuild:
  Stable for HPPA (bug #366131).

  12 Jun 2011; Raúl Porcel <armin76@gentoo.org> twisted-web-11.0.0.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #366131

  03 Jun 2011; Brent Baude <ranger@gentoo.org> twisted-web-11.0.0.ebuild:
  Marking twisted-web-11.0.0 ppc stable for bug 366131

  02 Jun 2011; Markus Meier <maekke@gentoo.org> twisted-web-11.0.0.ebuild:
  arm stable, bug #366131

  26 May 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  twisted-web-11.0.0.ebuild: