@@ -1,1 +1,2 @@
 DIST TwistedWeb-11.1.0.tar.bz2 373315 SHA256 4858e1112b6520c15ca0276569537a1e5ec9da96baca9b9107df77b9e4f5df4d SHA512 199ec84d42b60de338a54cfd3d98d3bd1a1fe2343c8bb37a391dc4fe31bc949271ff77578f31a3e6139aac52a313354bf891723f553855e03fa10e8417f48d2c WHIRLPOOL a449396b44782581fef0360d61bbd71fc9d5a90774de5dbe8f0ffab3fe4c3fefa065a8ab0a9d1bb57a0d52a790b37f04dee6f508bc96d1dfbf389fbaa46b4206
+DIST TwistedWeb-12.3.0.tar.bz2 393179 SHA256 d13e220235788f5e2542c9f8f906fe79e59793f5212cd9862002ea084ea666ca SHA512 2c1d857a0f92b781cc683e59f7e0e16b6a1158b1a45a9b947635da2bbaf78f0988bcf6503ad58b6c5109ab710db3c2f860ac4d446654c55394c49fdc7dc5b3e4 WHIRLPOOL 59c4db46679d0c7de3b881256aee1e0a2c6a33e6a7a481554a3b9b419f172774ec28a30849d731479b1659a7eb6a30713bd033ec72ea5c6943cb15d09483dee1
