@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-web/ChangeLog,v 1.82 2013/01/14 03:59:48 patrick Exp $
 
+*twisted-web-12.3.0-r1 (02 Apr 2013)
+
+  02 Apr 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
+  +twisted-web-12.3.0-r1.ebuild:
+  Use twisted-r1 eclass.
+
 *twisted-web-11.1.0-r1 (02 Apr 2013)
 
   02 Apr 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
